--- a/templates/patient_history.html
+++ b/templates/patient_history.html
@@ -23,6 +23,15 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
+  <header class="header-bg shadow-md">
+        <div class="container mx-auto flex items-center">
+            <img src="/static/uploads/JNUlogo.jpeg" alt="JNU Logo" class="header-logo" />
+            <div class="header-text">
+                <h1>JNU Health Centre</h1>
+                <p>Online Specialist Consultations & Part Time Psychology Services</p>
+            </div>
+        </div>
+    </header>
 
     <!-- 1. Header and Navigation -->
     <header class="bg-white shadow-lg sticky top-0 z-20">
