--- a/templates/add_department.html
+++ b/templates/add_department.html
@@ -23,6 +23,15 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
+  <header class="header-bg shadow-md">
+        <div class="container mx-auto flex items-center">
+            <img src="/static/uploads/JNUlogo.jpeg" alt="JNU Logo" class="header-logo" />
+            <div class="header-text">
+                <h1>JNU Health Centre</h1>
+                <p>Online Specialist Consultations & Part Time Psychology Services</p>
+            </div>
+        </div>
+    </header>
 
     <!-- Flash Messages Area -->
     <div class="fixed top-4 right-4 z-50 space-y-2 w-80">
