--- a/templates/doctor_dept.html
+++ b/templates/doctor_dept.html
@@ -29,6 +29,15 @@
 <body class="min-h-screen flex flex-col">
 
     <!-- 1. Header -->
+     <header class="header-bg shadow-md">
+        <div class="container mx-auto flex items-center">
+            <img src="/static/uploads/JNUlogo.jpeg" alt="JNU Logo" class="header-logo" />
+            <div class="header-text">
+                <h1>JNU Health Centre</h1>
+                <p>Online Specialist Consultations & Part Time Psychology Services</p>
+            </div>
+        </div>
+    </header>
     <header class="bg-white shadow-lg sticky top-0 z-20">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
 
