--- a/templates/doctor_profile.html
+++ b/templates/doctor_profile.html
@@ -31,6 +31,15 @@
 </head>
 
 <body class="min-h-screen flex flex-col">
+  <header class="header-bg shadow-md">
+        <div class="container mx-auto flex items-center">
+            <img src="/static/uploads/JNUlogo.jpeg" alt="JNU Logo" class="header-logo" />
+            <div class="header-text">
+                <h1>JNU Health Centre</h1>
+                <p>Online Specialist Consultations & Part Time Psychology Services</p>
+            </div>
+        </div>
+    </header>
 
     <!-- HEADER -->
     <header class="bg-white shadow-lg sticky top-0 z-20">
