--- a/templates/full_report.html
+++ b/templates/full_report.html
@@ -40,6 +40,15 @@
 </head>
 
 <body>
+  <header class="header-bg shadow-md">
+        <div class="container mx-auto flex items-center">
+            <img src="/static/uploads/JNUlogo.jpeg" alt="JNU Logo" class="header-logo" />
+            <div class="header-text">
+                <h1>JNU Health Centre</h1>
+                <p>Online Specialist Consultations & Part Time Psychology Services</p>
+            </div>
+        </div>
+    </header>
 
     <div class="container mt-4 mb-4">
 
